--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,6 +1,6 @@
 ---
 server:
-  name: docca-template
+  name: docca-builder
   port: 8008
   log_level: debug
 express:
@@ -8,4 +8,5 @@ express:
     limit: 1mb
 docca:
   api_url: https://api.docca.io
-  api_key: ''
+  api_key: apikey_replaceThisWithYourApiKey
+
