--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "copin": "^0.0.6",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
+    "multer": "^1.3.0",
     "preact": "^8.1.0",
     "request": "^2.81.0",
     "stripe": "^4.19.0"
